fixed grid gap variants to only target column-gap and not row

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -564,9 +564,9 @@ main > .section-outer:has(.section.strong-bottom-shadow) {
   }
   
   &.gap-0 { gap: 0; }
-  &.gap-2 { gap: 2rem; }
-  &.gap-3 { gap: 3rem; }
-  &.gap-4 { gap: 0; }
+  &.gap-2 { gap: 2rem 0; }
+  &.gap-3 { gap: 3rem 0; }
+  &.gap-4 { gap: 4rem 0; }
 }
 
 .section.grid-section > .default-content-wrapper {
@@ -617,6 +617,15 @@ main > .section-outer:has(.section.strong-bottom-shadow) {
     max-width: var(--container-width);
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .block .background .tablet-only {
+    display: block;
+  }
+
+  .block .background .mobile-only,
+  .block .background .desktop-only {
+      display: none;
   }
 
   :root {  --container-width: 540px; }
